@@ -1082,10 +1082,10 @@ sub OutputFunction {
     my $id = &CreateValidSGMLID ($symbol);
 
     # Take out the return type
-    $declaration =~ s/<RETURNS>\s*(const\s+|G_CONST_RETURN\s+|unsigned\s+)*(\w+)\s*(((\s+const\s+|\s+G_CONST_RETURN\s+)?\*)*)\s*<\/RETURNS>\n//;
+    $declaration =~ s/<RETURNS>\s*((const\s+|G_CONST_RETURN\s+|unsigned\s+|struct\s+)*)(\w+)\s*(\**\s*(const|G_CONST_RETURN)?\s*\**\s*)<\/RETURNS>\n//;
     my $type_modifier = defined($1) ? $1 : "";
-    my $type = $2;
-    my $pointer = $3;
+    my $type = $3;
+    my $pointer = $4;
 #   print "$symbol pointer is $pointer\n";
     my $xref = &MakeXRef ($type);
     my $start = "";
